# commercial-bank-api

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  nepse_index.py  pyproject.toml  requirements.txt
data/combined/: combinedBankData.csv
data/interim/: NPR_USD.csv  nepse_index.csv
lightning_logs/version_0/: hparams.yaml
models/: direction_classifier.pkl  fundamental_lookup.csv  label_encoder.pkl  model_clf_dir.pkl  model_clf_mom.pkl  model_meta.json  model_reg_mag.pkl  model_scaler.pkl  return_regressor.pkl  sector_ret_history.csv  tft_best_model.ckpt  tft_model.pth
notebooks/: Autotft.ipynb  NEPSE_HISTOGRADIENT.ipynb  add_columns.ipynb  bank_hgb_v4_train.ipynb  data_combine.ipynb  feature_engineering.py  inference_pipeline.py  train_model.py
src/controller/auth/: userController.py
src/controller/company/: company.py
src/core/: database.py
src/core/auth/: authHandler.py  hashHandler.py
src/db/models/: company.py  inference.py  market_data.py  user.py  user_preference.py
src/db/schema/: company.py  inference.py  market_data.py  tft_advanced.py  user.py  user_preference.py
src/routers/: auth.py  company.py  inference.py  market_data.py  tft_advanced.py  user_preference.py
src/scripts/: nepse_index.json  nepse_scraper.py
src/service/: base.py  companyService.py  inference_service.py  tft_advanced_service.py  userService.py
src/tft_artifacts/: tft-best-epoch=00-val_loss=0.0794.ckpt  tft_meta.json
src/util/: init_db.py  middleware.py
tests/: test_tft_advanced_inference.py
(+1939 files in other folders)
