[project]
name = "ml-ete"
version = "0.1.0"
description = "Financial Market Forcasting"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "beautifulsoup4>=4.14.3",
    "fastapi[standard]>=0.135.1",
    "lightning>=2.5,<2.7",
    "matplotlib>=3.10.8",
    "numpy>=1.26,<3.0",
    "openpyxl>=3.1.5",
    "pandas>=2.1,<3.0",
    "psycopg2-binary>=2.9.11",
    "pytorch-forecasting>=1.4,<1.7",
    "pyjwt>=2.11.0",
    "python-decouple>=3.8",
    "scikit-learn>=1.6,<1.7",
    "seaborn>=0.13.2",
    "selenium>=4.41.0",
    "sqlalchemy>=2.0.48",
    "torch>=2.6,<2.11",
    "webdriver-manager>=4.0.2",
    "xgboost>=3.2.0",
]
